Fix mistake in blog

--- a/content/how-to-handle-large-data-in-frontend-applications.mdx
+++ b/content/how-to-handle-large-data-in-frontend-applications.mdx
@@ -6,7 +6,7 @@ summary: "Explore powerful techniques for handling large datasets in React appli
 
 ### Introduction
 
-Handling large datasets is a common challenge in frontend applications. As the amount of data grows, it can lead to performance issues, such as slow loading times and unresponsive user interfaces. In this blog, we will explore different methods to effectively handle large datasets in React applications. We will discuss techniques like pagination, infinite scroll, windowing, and more. By implementing these strategies, we can ensure that our frontend application remains fast and efficient, even when dealing with large amounts of data.
+Handling large datasets is a common challenge in frontend applications. As the amount of data grows, it can lead to performance issues, such as slow loading times and unresponsive user interfaces. In this blog, we will explore different methods to effectively handle large datasets in React applications. We will discuss techniques like pagination, infinite scroll, and windowing. By implementing these strategies, we can ensure that our frontend application remains fast and efficient, even when dealing with large amounts of data.
 
 ### Understanding the Performance Problems with Large Datasets
 
